crates/texo-core/tests/compile_fail/closed_journal_append.stderr
error[E0599]: no method named `handle` found for struct `texo_core::Journal<Closed>` in the current scope
  --> tests/compile_fail/closed_journal_append.rs:11:20
   |
11 |     let _ = closed.handle(); //~ ERROR no method named `handle`
   |                    ^^^^^^ private field, not a method
